<resources>
    <string name="app_name">Tugas Mobile Abi</string>
    <string name="display">Masukkan Angka</string>
    <string name="fakeHint"> </string>
    <string name="backspace"> </string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="clear">C</string>
    <string name="percent">^</string>
    <string name="parentheses">( )</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="plusMinus">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="home">Home</string>
    <string name="mobile_programming">Mobile Programming</string>
    <string name="my_name">Ahmad Abi Mulya</string>
    <string name="my_nim">1911511457</string>
    <string name="txt_tugas_1">Tugas 1\nSimple Calculator</string>
    <string name="email">Email</string>
    <string name="my_email">1911511457@student.budiluhur.ac.id</string>
    <string name="phone">Phone</string>
    <string name="my_phone">0877-3778-7988</string>
    <string name="instagram">Instagram</string>
    <string name="my_instagram">abimulya.2001</string>
    <string name="facebook">Facebook</string>
    <string name="my_facebook">Ahmad Abi Mulya</string>
    <string name="about_me">About Me</string>
    <string name="take_picture">Click Gambar dibawah ini untuk mengambil gambar baru</string>
</resources>