<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad"
        android:paddingBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="130dp"
                android:layout_margin="9dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/foto_abi_ubl" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:fontFamily="sans-serif-light"
            android:text="@string/my_name"
            android:textColor="@color/white"
            android:textSize="32sp" />


        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/my_nim"
            android:textAllCaps="true"
            android:textColor="@color/address"
            android:textSize="14sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnTakePicture"
        android:text="Go To Take Picture Page"
        android:textSize="14sp"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rellay1"/>
    <Button
        android:id="@+id/btnAboutMe"
        android:text="@string/about_me"
        android:textSize="14sp"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rellay1"/>

</androidx.constraintlayout.widget.ConstraintLayout>